--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -13,10 +13,10 @@
       /></a>
       <nav>
         <ul class="Nav_links">
-          <li><a href="/mr-fox/repositories/">Repositories</a></li>
-          <li><a href="/mr-fox/posts/">Tutorials</a></li>
+          <li><a href="/repositories/">Repositories</a></li>
+          <li><a href="/posts/">Tutorials</a></li>
           <li><a href="http://mr-fox.blog.ir/">Blog</a></li>
-          <li><a href="/mr-fox/about/">About</a></li>
+          <li><a href="/about/">About</a></li>
         </ul>
       </nav>
       <a class="Cta" href="#"><button>Donate</button></a>
