--- a/_layouts/not_found.html
+++ b/_layouts/not_found.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="{{site.baseurl}}/css/not_found.css" />
     <title>Mr.Fox</title>
+    <link rel="shortcut icon" href="/assets/img/nav-image/mr-fox.png" />
   </head>
   <body>
     {% include nav.html %}
