--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,6 +6,7 @@
     <meta name="author" content="Meisam Heidari" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="هک و امنیت شبکه,امنیت سایبری,مهندسی اجتماعی,تست و نفوذ,هک,امنیت شبکه,hack,hacker,hacker tools,کامپیوتر,نفوذ به سیستم,لینوکس,سیستم عامل,حمله سایبری,سخت افزار,os,windows,mac,مک,ویندوز,هک در ایران,ایران هکر,مرد میدان,mr.fox,MR.FOX,Mr.Fox,Metasploitable,metasploitable,Metasploit,zap,MITM,mitm,man in the middel,man,آموزش,آموزش های لینوکس,آموزش لینوکس,آموزش ترمینال,آموزش کار با صفحه ترمینال,Python,python,آموزش پایتون,زبان برنامه نویسی پایتون,پایتون چیست">
     <link rel="stylesheet" href="{{site.baseurl}}/css/home.css" />
     <title>Mr.Fox</title>
     <link rel="shortcut icon" href="/assets/img/nav-image/mr-fox.png" />
