--- a/css/post.css
+++ b/css/post.css
@@ -7,9 +7,8 @@
   box-sizing: border-box;
 }
 main {
-  min-height: 200vh;
+  min-height: 100vh;
   background: #1d1e3c url(//cdn.bayan.ir/blog/templates/359/bg.jpg) top fixed;
-  display: flex;
 }
 code {
   width: 100%;
@@ -44,6 +43,7 @@ pre {
   font-family: "Dancing Script", cursive;
   padding: 1rem;
   margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
   margin-right: 1rem;
   background: url(//cdn.bayan.ir/blog/templates/359/blackdot3.png);
   border-radius: 1rem;
@@ -86,6 +86,7 @@ pre {
   height: 30rem;
   color: rgb(243, 196, 108);
   padding: 1%;
+  margin-top: 0.5rem;
   font-family: "Dancing Script", cursive;
   font-size: 1rem;
   background: url(//cdn.bayan.ir/blog/templates/359/blackdot3.png);
