--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,7 +15,7 @@
         <ul class="Nav_links">
           <li><a href="/repositories/">Repositories</a></li>
           <li><a href="/posts/">Tutorials</a></li>
-          <li><a href="http://mr-fox.blog.ir/">Blog</a></li>
+          <li><a href="http://mr-fox.blog.ir/" target="_blank">Blog</a></li>
           <li><a href="/about/">About</a></li>
         </ul>
       </nav>
