--- a/css/home.css
+++ b/css/home.css
@@ -33,9 +33,21 @@ main {
   margin: 1rem;
   box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.849), 0 0 0.5rem rgba(0, 0, 0, 0.849);
 }
+.Title h1 {
+  transition: all 0.3s ease 0s;
+}
+.Title h1:hover {
+  text-shadow: 0 0 0.5rem rgba(255, 255, 255, 0.849),
+    0 0 0.5rem rgba(255, 255, 255, 0.849);
+}
 .Title h4 {
   display: flex;
   justify-content: center;
+  transition: all 0.3s ease 0s;
+}
+.Title h4:hover {
+  text-shadow: 0 0 0.5rem rgba(255, 255, 255, 0.849),
+    0 0 0.5rem rgba(255, 255, 255, 0.849);
 }
 .Hacker {
   min-width: 100%;
@@ -62,6 +74,20 @@ main {
   align-items: center;
   justify-content: center;
   flex: 1;
+}
+.Hacker p {
+  transition: all 0.3s ease 0s;
+}
+.Hacker p:hover {
+  text-shadow: 0 0 0.5rem rgba(104, 158, 17, 0.849),
+    0 0 0.5rem rgba(104, 158, 17, 0.849);
+}
+.Hacker h2 {
+  transition: all 0.3s ease 0s;
+}
+.Hacker h2:hover {
+  text-shadow: 0 0 0.5rem rgba(104, 158, 17, 0.849),
+    0 0 0.5rem rgba(104, 158, 17, 0.849);
 }
 .Security {
   min-width: 100%;
@@ -90,6 +116,20 @@ main {
   justify-content: center;
   flex: 1;
 }
+.Security p {
+  transition: all 0.3s ease 0s;
+}
+.Security p:hover {
+  text-shadow: 0 0 0.5rem rgba(104, 158, 17, 0.849),
+    0 0 0.5rem rgba(104, 158, 17, 0.849);
+}
+.Security h2 {
+  transition: all 0.3s ease 0s;
+}
+.Security h2:hover {
+  text-shadow: 0 0 0.5rem rgba(104, 158, 17, 0.849),
+    0 0 0.5rem rgba(104, 158, 17, 0.849);
+}
 .Programmer {
   min-width: 100%;
   min-height: 10%;
@@ -117,6 +157,20 @@ main {
   justify-content: center;
   flex: 1;
 }
+.Programmer p {
+  transition: all 0.3s ease 0s;
+}
+.Programmer p:hover {
+  text-shadow: 0 0 0.5rem rgba(104, 158, 17, 0.849),
+    0 0 0.5rem rgba(104, 158, 17, 0.849);
+}
+.Programmer h2 {
+  transition: all 0.3s ease 0s;
+}
+.Programmer h2:hover {
+  text-shadow: 0 0 0.5rem rgba(104, 158, 17, 0.849),
+    0 0 0.5rem rgba(104, 158, 17, 0.849);
+}
 .Linux {
   min-width: 100%;
   min-height: 10%;
@@ -143,4 +197,18 @@ main {
   align-items: center;
   justify-content: center;
   flex: 1;
+}
+.Linux p {
+  transition: all 0.3s ease 0s;
+}
+.Linux p:hover {
+  text-shadow: 0 0 0.5rem rgba(104, 158, 17, 0.849),
+    0 0 0.5rem rgba(104, 158, 17, 0.849);
+}
+.Linux h2 {
+  transition: all 0.3s ease 0s;
+}
+.Linux h2:hover {
+  text-shadow: 0 0 0.5rem rgba(104, 158, 17, 0.849),
+    0 0 0.5rem rgba(104, 158, 17, 0.849);
 }
