--- a/css/post.css
+++ b/css/post.css
@@ -24,8 +24,27 @@ pre {
   padding: 5px;
   padding-left: 1rem;
   margin-top: 1rem;
-  margin-bottom: 5px;
+  margin-bottom: 1rem;
   box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.849), 0 0 0.5rem rgba(0, 0, 0, 0.849);
+  width: 100%;
+  overflow-x: scroll;
+  overflow-y: hidden;
+}
+pre::-webkit-scrollbar-track {
+  border: 1px solid #000;
+  border-radius: 10px;
+  padding: 2px 0;
+  background-color: rgba(0, 0, 0, 0.425);
+  
+}
+pre::-webkit-scrollbar {
+  width: 10px;
+}
+pre::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+  background-color: #737272;
+  border: 1px solid #000;
 }
 .Posts {
   width: 1200px;
