--- a/_layouts/not_found.html
+++ b/_layouts/not_found.html
@@ -1,28 +1,54 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="description" content="programing, hacking, learn" />
-    <meta name="author" content="Meisam Heidari" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{{site.baseurl}}/css/not_found.css" />
-    <title>Mr.Fox</title>
-    <link rel="shortcut icon" href="/assets/img/nav-image/mr-fox.png" />
-  </head>
-  <body>
-    {% include nav.html %}
-    <main>
-      <section class="Intro">
-        <aside class="Title">
-          <h1>4 😭 4</h1>
-        </aside>
-        <section class="Title">
-          <h4>Page not found 😞</h4>
-          <h4>The requested page could not be found.</h4>
-        </section>
-      </section>
-    </main>
-    {% include end.html %}
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{site.baseurl}}/style/not_found.css">
+    <title>404</title>
+</head>
+{% include nav.html %}
+<body>
+<main>
+<div class="error">
+
+<div class="wrap">
+  <div class="404">
+    <pre><code>
+   <span class="green">&lt;!</span><span>DOCTYPE html</span><span class="green">&gt;</span>
+<span class="orange">&lt;html&gt;</span>
+    <span class="orange">&lt;style&gt;</span>
+   * {
+            <span class="green">everything</span>:<span class="blue">awesome</span>;
+}
+     <span class="orange">&lt;/style&gt;</span>
+ <span class="orange">&lt;body&gt;</span> 
+              ERROR 404!
+        FILE NOT FOUND!
+        <span class="comment">&lt;!--The file you are looking for, 
+          is not where you think it is.--&gt;
+    </span>
+ <span class="orange"></span> 
+        
+
+
+</div>
+<br />
+<span class="info">
+<br />
+
+<span class="orange">&nbsp;&lt;/body&gt;</span>
+
+<br/>
+      <span class="orange">&lt;/html&gt;</span>
+    </code></pre>
+  </div>
+</div>
+
+
+</span>
+
+ 
+</main>
+</body>
 </html>
