--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
-<html lang="fa">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="programing, hacking, learn" />
     <meta name="author" content="Meisam Heidari" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{{site.baseurl}}/css/post.css" />
-    <title>Mr.Fox</title>
-    <link rel="shortcut icon" href="/assets/img/nav-image/mr-fox.png" />
+    <meta
+      name="keywords"
+      content="هک و امنیت شبکه,امنیت سایبری,مهندسی اجتماعی,تست و نفوذ,هک,امنیت شبکه,hack,hacker,hacker tools,کامپیوتر,نفوذ به سیستم,لینوکس,سیستم عامل,حمله سایبری,سخت افزار,os,windows,mac,مک,ویندوز,هک در ایران,ایران هکر,مرد میدان,mr.fox,MR.FOX,Mr.Fox,Metasploitable,metasploitable,Metasploit,zap,MITM,mitm,man in the middel,man,آموزش,آموزش های لینوکس,آموزش لینوکس,آموزش ترمینال,آموزش کار با صفحه ترمینال,Python,python,آموزش پایتون,زبان برنامه نویسی پایتون,پایتون چیست"
+    />
+    <link
+      rel="stylesheet"
+      media="(min-width: 500px)"
+      href="{{site.baseurl}}/style/post.css"
+    />
+    <title>{{ site.title }}</title>
   </head>
+  {% include nav.html %}
   <body>
-    {% include nav.html %}
     <main>
-      <section class="Posts">
-        <div class="Post">
-          <h2 href="{{page.url}}">{{page.title}}</h2>
-          <hr width="100rem" />
-          <p>{{content}}</p>
-        </div>
-        <div class="History">
-          <h2>Recent Posts:</h2>
-          <div>
-            {% for post in site.posts %}
-            <li><a href="{{post.url}}">{{post.title}}</a></li>
-            {% endfor %}
-          </div>
-        </div>
+      <section>
+        <h1>{{ page.title }}</h1>
+        <br />
+        <hr />
+        <br />
+        <p>{{ content }}</p>
+        <br />
       </section>
     </main>
-    {% include end.html %}
+    <hr />
+    {% include items.html %}
   </body>
 </html>
