--- a/_includes/items.html
+++ b/_includes/items.html
@@ -22,7 +22,7 @@
         <a href="#"><ion-icon name="people-circle"></ion-icon></a>
       </li>
       <li style="--i: 3">
-        <a href="#"><ion-icon name="alert-circle"></ion-icon></a>
+        <a href="/about"><ion-icon name="alert-circle"></ion-icon></a>
       </li>
     </div>
     <span>
