--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -20,21 +20,21 @@
           </a>
         </li>
         <li class="List">
-          <a href="#" target="_blank">
-            <span class="Icon"><ion-icon name="wallet"></ion-icon></span>
-            <span class="Text">Fund</span>
+          <a href="#">
+            <span class="Icon"><ion-icon name="diamond"></ion-icon></span>
+            <span class="Text">Donate</span>
           </a>
         </li>
         <li class="List">
           <a href="/posts/">
-            <span class="Icon"><ion-icon name="mail"></ion-icon></span>
-            <span class="Text">Post</span>
+            <span class="Icon"><ion-icon name="laptop"></ion-icon></span>
+            <span class="Text">Devlog</span>
           </a>
         </li>
         <li class="List">
-          <a href="#">
+          <a href="/documents/">
             <span class="Icon"
-              ><ion-icon name="document-text-outline"></ion-icon
+              ><ion-icon name="document-text"></ion-icon></ion-icon
             ></span>
             <span class="Text">Documents</span>
           </a>
@@ -42,13 +42,13 @@
         <li class="List">
           <a href="/repositories/">
             <span class="Icon"
-              ><ion-icon name="git-merge-outline"></ion-icon
+              ><ion-icon name="git-compare"></ion-icon></ion-icon
             ></span>
             <span class="Text">Repositories</span>
           </a>
         </li>
         <li class="List">
-          <a href="https://mr-fox.blog.ir/">
+          <a href="/blog/">
             <span class="Icon"><ion-icon name="desktop"></ion-icon></span>
             <span class="Text">Blog</span>
           </a>
