--- a/_layouts/documents.html
+++ b/_layouts/documents.html
@@ -5,10 +5,6 @@
     <meta name="author" content="Meisam Heidari" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="keywords"
-      content="هک و امنیت شبکه,امنیت سایبری,مهندسی اجتماعی,تست و نفوذ,هک,امنیت شبکه,hack,hacker,hacker tools,کامپیوتر,نفوذ به سیستم,لینوکس,سیستم عامل,حمله سایبری,سخت افزار,os,windows,mac,مک,ویندوز,هک در ایران,ایران هکر,مرد میدان,mr.fox,MR.FOX,Mr.Fox,Metasploitable,metasploitable,Metasploit,zap,MITM,mitm,man in the middel,man,آموزش,آموزش های لینوکس,آموزش لینوکس,آموزش ترمینال,آموزش کار با صفحه ترمینال,Python,python,آموزش پایتون,زبان برنامه نویسی پایتون,پایتون چیست"
-    />
     <link
       rel="stylesheet"
       media="(min-width: 500px)"
@@ -19,7 +15,7 @@
   {% include nav.html %}
   <body>
     <main>
-      <h1>Devlog</h1>
+      <h1>Document</h1>
       <section>
         <div class="Post">
           {% for post in site.posts %}
