--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,8 +22,8 @@
       <div class="Cool_View">
         <div class="Title">
           <h1>Mr.Fox</h1>
-          <h1>Be a Programmer, hacker ...</h1>
-          <h6>Lets be better ...</h6>
+          <h1>Be Man Of The Field</h1>
+          <h6>Another day, another program</h6>
           <button>
             <a class="Button" href="#">
               <ion-icon class="Money" name="diamond"></ion-icon>
@@ -33,52 +33,12 @@
         </div>
         <div class="Tag">
           <div class="Icons">
-            <ion-icon class="Home_Logo" name="laptop-outline"></ion-icon>
+            <ion-icon class="Home_Logo" name="rose"></ion-icon>
           </div>
           <div class="Note">
-            <h2>Hack</h2>
+            <h2>Welcome To My Sidehill</h2>
             <hr />
-            <p>آموزش های کامل و جامع هک و امنیت شبکه</p>
-          </div>
-        </div>
-        <div class="Tag">
-          <div class="Note">
-            <h2>IT</h2>
-            <hr />
-            <p>IT آموزش های کامل و جامع در رابطه با</p>
-          </div>
-          <div class="Icons">
-            <ion-icon class="Home_Logo" name="lock-closed-outline"></ion-icon>
-          </div>
-        </div>
-        <div class="Tag">
-          <div class="Icons">
-            <ion-icon class="Home_Logo" name="logo-tux"></ion-icon>
-          </div>
-          <div class="Note">
-            <h2>Linux</h2>
-            <hr />
-            <p>آموزش کار با سیستم عامل لینوکس</p>
-          </div>
-        </div>
-        <div class="Tag">
-          <div class="Note">
-            <h2>Programming</h2>
-            <hr />
-            <p>آموزش زبان های برنامه نویسی</p>
-          </div>
-          <div class="Icons">
-            <ion-icon class="Home_Logo" name="code-slash-outline"></ion-icon>
-          </div>
-        </div>
-        <div class="Tag">
-          <div class="Icons">
-            <ion-icon class="Home_Logo" name="construct-outline"></ion-icon>
-          </div>
-          <div class="Note">
-            <h2>Devlog</h2>
-            <hr />
-            <p>ساخت نرم افزار ها و ایده های نو</p>
+            <p>{{site.description}}</p>
           </div>
         </div>
       </div>
