--- a/_includes/items.html
+++ b/_includes/items.html
@@ -11,17 +11,24 @@
     <div class="Menu">
       <div class="Menu_Items"><ion-icon name="apps"></ion-icon></div>
       <li style="--i: 0">
-        <a href="https://www.aparat.com/Mr.Fox.h">
-          <ion-icon name="videocam"></ion-icon>
-        </a>
+        <a href="https://www.aparat.com/Mr.Fox.h"><ion-icon name="videocam"></ion-icon></a>
       </li>
       <li style="--i: 1">
-        <a href="#"><ion-icon name="chatbox-ellipses"></ion-icon></a>
+        <a href=""><ion-icon name="logo-youtube"></ion-icon></ion-icon></a>
       </li>
       <li style="--i: 2">
-        <a href="#"><ion-icon name="people-circle"></ion-icon></a>
+        <a href="https://ruby.social/@mrfoxh"><ion-icon name="logo-mastodon"></ion-icon></a>
       </li>
       <li style="--i: 3">
+        <a href="https://twitter.com/DMeisam3"><ion-icon name="logo-twitter"></ion-icon></a>
+      </li>
+      <li style="--i: 4">
+        <a href="#"><ion-icon name="chatbox-ellipses"></ion-icon></a>
+      </li>
+      <li style="--i: 5">
+        <a href="#"><ion-icon name="people-circle"></ion-icon></a>
+      </li>
+      <li style="--i: 6">
         <a href="/about"><ion-icon name="alert-circle"></ion-icon></a>
       </li>
     </div>
