--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,7 +15,7 @@
       <ul>
         <li class="List">
           <a href="/">
-            <span class="Icon"><ion-icon name="logo-firefox"></ion-icon></span>
+            <span class="Icon"><ion-icon name="home"></ion-icon></span>
             <span class="Text">Home</span>
           </a>
         </li>
